--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.9",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.2.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "framer-motion": "^8.5.0",
     "next": "13.0.1",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
